@@ -1,3 +1,11 @@
+2014-09-02  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	* src/html/classic/js/gsa_bubble_chart.js (BubbleChartGenerator): Round
+	severity to one decimal place in tooltip.
+	(BubbleChartGenerator [generate]): Save data_column in a variable.
+	Fix nodes list generated for empty datasets and remove bubbles without
+	any assigned data.
+
 2014-09-02  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* CMakeLists.txt, doc/gsad.8.xml, src/CMakeLists.txt, src/gsad_base.c,
